--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@
                 100%" alt="munnar_pic">
              <div class="main-txt">
                 <h2 class="m-about">About Munnar</h2>
-                <h5 class="m-detail">Munnar is a town in the Western Ghats mountain range in India’s Kerala state.
+                <div class="m-detail">
+                <h5 >Munnar is a town in the Western Ghats mountain range in India’s Kerala state.
                                      A hill station and former resort for the British Raj elite, it's surrounded by 
                                      rolling hills dotted with tea plantations established in the late 19th century.
                                      Eravikulam National Park, a habitat for the endangered mountain goat Nilgiri tahr, 
                                      is home to the Lakkam Waterfalls, hiking trails and 2,695m-tall Anamudi Peak.
                                     </h5>
+                </div>
                    <p class="m-address">
                     Area: 187 km²
                     Elevation: 1,532 m
