--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
 
             <div class="contact">
                         <i class="fa-brands fa-whatsapp"></i>
-                        <i class="fa-solid fa-map-location-dot"></i>
+                        <a href="https://maps.app.goo.gl/oZopPFMov9nMNzFJ9"><i class="fa-solid fa-map-location-dot"></i></a>
+                        
                         <i class="fa-solid fa-address-card"></i> 
                         <i class="fa-brands fa-instagram"></i>
             </div>
